# SingleInstance

./: CMakeLists.txt  Main.qml  README.md  icon.rc  main.cpp  qtquickcontrols2.conf  res.qrc
cpp/: run_guard.cpp  run_guard.h
qml/: CDialog.qml  RunGuardWindow.qml
